--- a/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Create.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Create.cshtml
@@ -31,8 +31,6 @@
                                     Mã Nhân Viên<span class="required">*</span>
                                 </label>
 
-                                @*@Html.LabelFor(model => model.TenNV)*@
-
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     @Html.TextBoxFor(model => model.MaNV, new { @class = "form-control col-md-7 col-xs-12" })
                                     @Html.ValidationMessageFor(model => model.MaNV, "", new { @class = "text-danger" })
@@ -45,8 +43,6 @@
                                     Tên Nhân Viên <span class="required">*</span>
                                 </label>
 
-                                @*@Html.LabelFor(model => model.TenNV)*@
-
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     @Html.TextBoxFor(model => model.TenNV, new { @class = "form-control col-md-7 col-xs-12" })
                                     @Html.ValidationMessageFor(model => model.TenNV, "", new { @class = "text-danger" })
@@ -54,14 +50,13 @@
                             </div>
 
                             <div class="form-group">
-                                @*@Html.LabelFor(model => model.MaChucVu, htmlAttributes: new { @class = "control-label col-md-2" })*@
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Ma-Chuc-Vu">
                                     Mã Chức Vụ <span class="required">*</span>
                                 </label>
 
 
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @Html.TextBoxFor(model => model.MaChucVu, new { @class = "form-control col-md-7 col-xs-12" })
+                                    @Html.DropDownListFor(model => model.MaChucVu,null, new { @class = "form-control col-md-7 col-xs-12" })
                                     @Html.ValidationMessageFor(model => model.MaChucVu, "", new { @class = "text-danger" })
                                 </div>
 
@@ -70,7 +65,6 @@
 
 
                             <div class="form-group">
-                                @*@Html.LabelFor(model => model.MatKhau, htmlAttributes: new { @class = "control-label col-md-2" })*@
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Mat-Khau">
                                     Mật Khẩu <span class="required">*</span>
                                 </label>
@@ -82,7 +76,6 @@
 
                             </div>
                             <div class="form-group">
-                                @*@Html.LabelFor(model => model.DiaChi, htmlAttributes: new { @class = "control-label col-md-2" })*@
                                 <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Địa Chỉ</label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     @Html.TextBoxFor(model => model.DiaChi, new { @class = "form-control col-md-7 col-xs-12" })
@@ -90,8 +83,6 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                @*@Html.LabelFor(model => model.Sdt, htmlAttributes: new { @class = "control-label col-md-2" })*@
-
                                 <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Số Điện Thoại</label>
 
                                 <div class="col-md-6 col-sm-6 col-xs-12">
