--- a/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Index.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Index.cshtml
@@ -56,7 +56,7 @@
                             </div>
                             
                             <div class="col-md-6 col-md-offset-3">
-                                <button id="send" type="submit" class="btn btn-success">Submit</button>
+                                <button id="send" type="submit" class="btn btn-success">TÌM</button>
                             </div>
 
                         </form>
@@ -104,24 +104,33 @@
                                     <input type="text" value="@ViewBag.Sdt" name="Sdt" class="form-control col-md-7 col-xs-12">
                                 </div>
                             </div>
-                            @*<div class="item form-group">
+                            <div class="item form-group">
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Sdt">
                                     Ngày Gia Nhập
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     <input type="text" value="@ViewBag.Day" name="Ngay" class="form-control col-md-7 col-xs-12">
                                 </div>
-                            </div>*@
+                            </div>
                             <div class="item form-group">
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Sdt">
                                     Tình Trạng 
                                 </label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" placeholder="1: còn làm việc , 0: đã nghĩ"value="@ViewBag.Stt" name="Stt" class="form-control col-md-7 col-xs-12">
+                                    @*<input type="text" placeholder="1: còn làm việc , 0: đã nghĩ"value="@ViewBag.Stt" name="Stt" class="form-control col-md-7 col-xs-12">*@
+
+                                    <div class="btn-group"> 
+                                        <select name="Stt" class="btn btn-default dropdown-toggle">                                           
+                                            <option value="null" selected="selected">---Chọn----</option>
+                                            <option value="1" >Còn làm việc</option>
+                                            <option value="0">Đã nghĩ việc</option>                                         
+                                            </select>
+                                        </div>
+                                    
                                 </div>
                             </div>
                             <div class="col-md-6 col-md-offset-3">
-                                <button id="send" type="submit" class="btn btn-success">Submit</button>
+                                <button id="send" type="submit" class="btn btn-success">TÌM</button>
                             </div>
 
 
