cập nhật lại bảng tài khoản trong manager + trang index

--- a/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Create.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Model.EF.NhanVien
+﻿@model Model.EF.TaiKhoan
 
 @{
     ViewBag.Title = "Index";
@@ -32,8 +32,8 @@
                                 </label>
 
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @Html.TextBoxFor(model => model.MaNV, new { @class = "form-control col-md-7 col-xs-12" })
-                                    @Html.ValidationMessageFor(model => model.MaNV, "", new { @class = "text-danger" })
+                                    @Html.TextBoxFor(model => model.MaTaiKhoan, new { @class = "form-control col-md-7 col-xs-12" })
+                                    @Html.ValidationMessageFor(model => model.MaTaiKhoan, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
@@ -44,8 +44,8 @@
                                 </label>
 
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @Html.TextBoxFor(model => model.TenNV, new { @class = "form-control col-md-7 col-xs-12" })
-                                    @Html.ValidationMessageFor(model => model.TenNV, "", new { @class = "text-danger" })
+                                    @Html.TextBoxFor(model => model.HoTen, new { @class = "form-control col-md-7 col-xs-12" })
+                                    @Html.ValidationMessageFor(model => model.HoTen, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
@@ -72,22 +72,6 @@
                                 <div class="col-md-6 col-sm-6 col-xs-12">
                                     @Html.PasswordFor(model => model.MatKhau, new { @class = "form-control col-md-7 col-xs-12" })
                                     @Html.ValidationMessageFor(model => model.MatKhau, "", new { @class = "text-danger" })
-                                </div>
-
-                            </div>
-                            <div class="form-group">
-                                <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Địa Chỉ</label>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @Html.TextBoxFor(model => model.DiaChi, new { @class = "form-control col-md-7 col-xs-12" })
-                                    @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Số Điện Thoại</label>
-
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @Html.TextBoxFor(model => model.Sdt, new { @class = "form-control col-md-7 col-xs-12" })
-                                    @Html.ValidationMessageFor(model => model.Sdt, "", new { @class = "text-danger" })
                                 </div>
 
                             </div>
