--- a/QuanLiNhaHang/QuanLiNhaHang/Views/Index/Index.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Views/Index/Index.cshtml
@@ -53,7 +53,7 @@
                         <ul>
                             <li class="menu-item active"><a href="#banner" data-scroll>Home</a></li>
                             <li class="menu-item"><a href="#dish" data-scroll>About</a></li>
-                            <li class="menu-item">@Html.ActionLink("Log in", "Login", "Index")</li>
+                            <li class="menu-item">@Html.ActionLink("Log in", "Index", "Login")</li>
                         </ul>
                     </nav>
                     <div class="headesocial">
