--- a/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Edit.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Model.EF.NhanVien
+﻿@model Model.EF.TaiKhoan
 
 @{
     ViewBag.Title = "Index";
@@ -66,27 +66,6 @@
                                 </div>
 
                             </div>
-
-
-
-                       
-                            <div class="form-group">
-                                @*@Html.LabelFor(model => model.DiaChi, htmlAttributes: new { @class = "control-label col-md-2" })*@
-                                <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Địa Chỉ</label>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @Html.TextBoxFor(model => model.DiaChi, new { @class = "form-control col-md-7 col-xs-12" })
-                                    @Html.ValidationMessageFor(model => model.DiaChi, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                @*@Html.LabelFor(model => model.Sdt, htmlAttributes: new { @class = "control-label col-md-2" })*@
-
-                                <label for="middle-name" class="control-label col-md-3 col-sm-3 col-xs-12">Số Điện Thoại</label>
-
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @Html.TextBoxFor(model => model.Sdt, new { @class = "form-control col-md-7 col-xs-12" })
-                                    @Html.ValidationMessageFor(model => model.Sdt, "", new { @class = "text-danger" })
-                                </div>
 
                             </div>
 
