--- a/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Index.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<Model.EF.NhanVien>
+﻿@model PagedList.IPagedList<Model.EF.TaiKhoan>
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
@@ -89,22 +89,6 @@
                                 </div>
                             </div>
                             <div class="item form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="DiaChi">
-                                    Địa Chỉ
-                                </label>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" value="@ViewBag.DiaChi" name="DiaChi" class="form-control col-md-7 col-xs-12">
-                                </div>
-                            </div>
-                            <div class="item form-group">
-                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Sdt">
-                                    Số Điện Thoại
-                                </label>
-                                <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" value="@ViewBag.Sdt" name="Sdt" class="form-control col-md-7 col-xs-12">
-                                </div>
-                            </div>
-                            <div class="item form-group">
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="Sdt">
                                     Ngày Gia Nhập
                                 </label>
@@ -160,8 +144,6 @@
                                 <th>Mã Nhân Viên</th>
                                 <th>Tên Nhân Viên</th>
                                 <th>Mã Chức Vu</th>
-                                <th>Địa Chỉ</th>
-                                <th>Số điện thoại</th>
                                 <th>Ngày gia nhập</th>
 
                             </tr>
@@ -169,22 +151,20 @@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                                <tr id="row_@item.MaNV">
+                                <tr id="row_@item.MaTaiKhoan">
                                     <td>
-                                        <a href="/Manager/NhanVien/Edit/@item.MaNV">Sửa ||</a>
-                                        @Ajax.ActionLink("Xóa", "Delete", new { @id = item.MaNV }, new AjaxOptions
+                                        <a href="/Manager/NhanVien/Edit/@item.MaTaiKhoan">Sửa ||</a>
+                                        @Ajax.ActionLink("Xóa", "Delete", new { @id = item.MaTaiKhoan }, new AjaxOptions
                                        {
                                            Confirm = "Bạn muốn xóa bản ghi này?",
-                                           OnComplete = "$('row_" + @item.MaNV + "').remove()",
+                                           OnComplete = "$('row_" + @item.MaTaiKhoan + "').remove()",
                                            HttpMethod = "Delete"
 
                                        })
                                     </td>
-                                    <td>@item.MaNV</td>
-                                    <td>@item.TenNV</td>
+                                    <td>@item.MaTaiKhoan</td>
+                                    <td>@item.HoTen</td>
                                     <td>@item.MaChucVu</td>
-                                    <td>@item.DiaChi</td>
-                                    <td>@item.Sdt</td>
                                     <td>@item.NgayTao</td>
                                 </tr>
 
