save hộ bố m cái

--- a/QuanLiNhaHang/QuanLiNhaHang/Views/Index/Index.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Views/Index/Index.cshtml
@@ -77,7 +77,7 @@
                     </h1>
                     <img class="os-animation" data-os-animation="zoomIn" data-os-animation-delay="0.5s" src="~/Content/image/bannerbottm.png" alt="" />
                     <a href="#" class="table os-animation" data-os-animation="fadeInLeft" data-os-animation-delay="0.7s">BOOK A TABLE</a>
-                    <a href="#" class="menu os-animation" data-os-animation="fadeInRight" data-os-animation-delay="0.7s">SEE THE MENU</a>
+                    <a data-scroll href="#menu" class="menu os-animation" data-os-animation="fadeInRight" data-os-animation-delay="0.7s">SEE THE MENU</a>
                 </div>
             </div>
         </div>
@@ -91,7 +91,6 @@
                     <img class="parrern" src="~/Content/image/dishdottm.png" alt="" />
                     <p>If you’ve been to one of our restaurants, you’ve seen – and tasted – what keeps our customers coming back for more. Perfect materials and freshly baked food, delicious Lambda cakes,  muffins, and gourmet coffees make us hard to resist! Stop in today and check us out!</p>
                     <img class="sign" src="~/Content/image/sign.png" alt="" />
-
                 </div>
                 <div class="col-lg-7 col-sm-7 col-md-7 os-animation" data-os-animation="fadeInRight" data-os-animation-delay="0.9s">
                     <img class="dish" src="~/Content/image/dish.png" alt="" />
