--- a/QuanLiNhaHang/QuanLiNhaHang/Areas/Employee/Views/Shared/_LayoutPage1.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Areas/Employee/Views/Shared/_LayoutPage1.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -42,7 +43,7 @@
                         </div>
                         <div class="profile_info">
                             <span>Welcome,</span>
-                            <h2>Thi Phố</h2>
+                            
                         </div>
                     </div>
                     <!-- /menu profile quick info -->
@@ -63,7 +64,7 @@
                                     <ul class="nav child_menu">
                                         <li>@Html.ActionLink("Tạo hóa đơn", "Hoadon", "Home")</li>
                                         <li><a href="index.html">Chỉnh sửa hóa đơn</a></li>
-                                        <li><a href="index.html">Xóa hóa đơn</a></li>
+                                        
                                     </ul>
                                 </li>
                                 <li>
@@ -71,7 +72,7 @@
                                     <ul class="nav child_menu">
                                         <li><a href="index.html">Tạo phiếu nhập</a></li>
                                         <li><a href="index.html">Chỉnh sửa phiếu nhập</a></li>
-                                        <li><a href="index.html">Xóa phiếu nhập</a></li>
+                                        
                                     </ul>
                                 </li>
                             </ul>
