--- a/QuanLiNhaHang/QuanLiNhaHang/Areas/Employee/Views/Home/Chitiethoadon.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Areas/Employee/Views/Home/Chitiethoadon.cshtml
@@ -39,7 +39,7 @@
                     <div class="form-group">
                         <div class="col-md-6 col-md-offset-3">
                             <button class="btn btn-primary" id="send" type="submit" style="color: white;">Next</button>
-                            @Html.ActionLink("Xuất hóa đơn", "XuatHonDon", "Home","Employee", new { @style = "color: white;", @class = "btn btn-success", @id = "send", @type = "submit" })
+                            @Html.ActionLink("Xuất hóa đơn", "XuatHoaDon", "Home","Employee", new { @style = "color: white;", @class = "btn btn-success", @id = "send", @type = "submit" })
                         </div>
                     </div>
                 }
