--- a/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Edit.cshtml
+++ b/QuanLiNhaHang/QuanLiNhaHang/Areas/Manager/Views/NhanVien/Edit.cshtml
@@ -34,8 +34,8 @@
                                 @*@Html.LabelFor(model => model.TenNV)*@
 
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @Html.TextBoxFor(model => model.MaNV, new { @class = "form-control col-md-7 col-xs-12", @readonly="readonly" })
-                                    @Html.ValidationMessageFor(model => model.MaNV, "", new { @class = "text-danger" })
+                                    @Html.TextBoxFor(model => model.MaTaiKhoan, new { @class = "form-control col-md-7 col-xs-12", @readonly="readonly" })
+                                    @Html.ValidationMessageFor(model => model.MaTaiKhoan, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
@@ -48,8 +48,8 @@
                                 @*@Html.LabelFor(model => model.TenNV)*@
 
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    @Html.TextBoxFor(model => model.TenNV, new { @class = "form-control col-md-7 col-xs-12" })
-                                    @Html.ValidationMessageFor(model => model.TenNV, "", new { @class = "text-danger" })
+                                    @Html.TextBoxFor(model => model.HoTen, new { @class = "form-control col-md-7 col-xs-12" })
+                                    @Html.ValidationMessageFor(model => model.HoTen, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+       
     }
 
 </body>
